--- a/layouts/header.html
+++ b/layouts/header.html
@@ -1,7 +1,8 @@
 <header>
     <h1>DISNS</h1>
     <nav>
-        <a href="https://discord.com/api/oauth2/authorize?client_id=1017319444055339019&redirect_uri=http%3A%2F%2Flocalhost%3A8000%2F&response_type=code&scope=identify%20email%20dm_channels.read%20connections">login</a>
+        <a href="userSet.php?action=login">login</a>
+        <a href="userSet.php?action=logout">logout</a>
     </nav>
 </header>
 <div style="margin-bottom: 75px;"></div>
