discord oauth2 complete

--- a/layouts/meta.html
+++ b/layouts/meta.html
@@ -4,9 +4,9 @@
 
 <meta property="og:type" content="website">
 <meta property="og:title" content = "Disns">
-<link rel="apple-touch-icon-precomposed" href="imags/icon.png">
+<link rel="apple-touch-icon-precomposed" href="https://github.com/objectiveTM/.github/blob/main/disns.png?raw=true">
 
-<link rel="shortcut icon" type="image/x-icon" href="imags/icon.png">
+<link rel="shortcut icon" type="image/x-icon" href="https://github.com/objectiveTM/.github/blob/main/disns.png?raw=true">
 
 <meta name="twitter:card" content = "summary_large_image">
 <meta property="og:image" content = "https://github.com/5-23/botSite/blob/main/src/main.png?raw=true">
