--- a/style/sns.css
+++ b/style/sns.css
@@ -1,7 +1,11 @@
 *{
     margin: 0;
+}
+:root{
     --backgroundColor:rgb(231, 231, 231);
     --perple: rgb(132, 0, 255);
+    --blue: rgb(0, 140, 255);
+    --blueAlpha: rgba(0, 140, 255, 0.473);
 }
 
 body{
@@ -9,7 +13,9 @@ body{
 }
 
 
-
+img[alt="👍"]{
+    width: 15px;
+}
 *{
     overflow-x: hidden;
 }
@@ -21,16 +27,43 @@ main{
 nav[id="follower"]{
     width: 300px;
     height: 1000px;
-    margin-left: 20px;
-    margin-top: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 30px;
+    background-color: rgba(180, 180, 180, 0.274);
+    backdrop-filter: blur();
+}
+@keyframes follower-anime{
+    0%{
+        border-radius: 50px;
+        transform: rotateZ(45deg);
+    }
+    100%{
+        border-radius: 50px;
+        transform: rotateZ(405deg);
+    }
 }
 
+nav[id="follower"]::before{
+    content: '';
+    position: absolute;
+    background-image: linear-gradient(45deg , rgb(0, 174, 255) , rgb(153, 0, 255));
+    width: 500px;
+    height: 500px;
+    z-index: -1000;
+    filter: blur(10px);
+    transform: translateX(-300px) translateY(-100px);
 
-nav[id="follower"] > a:hover{
-    transform: rotate(2deg);
+    border-radius: 50px;
+    transform: rotateZ(405deg);
+
+    animation-name: follower-anime;
+    animation-duration: 3s;
+    /* animation-iteration-count: infinite; */
+    animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-nav[id="follower"] > a{
+nav[id="follower"] > div{
     display: flex;
     align-items: center;
     border-radius: 10px;
@@ -39,13 +72,54 @@ nav[id="follower"] > a{
     width: 90%;
     background-color: white;
     transition: all .3s;
+
+    /* transform: translateX(-550px); */
+    cursor: pointer;
+    opacity: 0;
+    animation-duration: .5s;
+    animation-timing-function: cubic-bezier(0.2 , 0.5 , 0.6 , 1);
     
 }
-nav[id="follower"] > a > h1{
+
+nav[id="follower"] > div:hover{
+    transform: rotate(2deg);
+}
+
+nav[id="follower"] > div[id="clickIt"]{
+    cursor: no-drop;
+}
+nav[id="follower"] > div[id="clickIt"]:hover{
+    transform: rotate(0deg);
+}
+@keyframes rainbow {
+    0%{
+        filter: hue-rotate(0deg)
+    }
+    100%{
+        filter: hue-rotate(360deg)
+    }
+}
+
+@keyframes leftToRight {
+    0%{
+        transform: translateX(-550px);
+    }
+    70%{
+        transform: translateX(20px);
+    }
+    80%{
+        transform: translateX(15px);
+    }
+    100%{
+        transform: translateX(0px);
+    }
+}
+
+nav[id="follower"] > div > h1{
     padding-left: 10px;
     color: black;
 }
-nav[id="follower"] > a > img{
+nav[id="follower"] > div > img{
     border-radius: 100%;
     width: 50px;
 }
@@ -54,47 +128,62 @@ article{
     margin-top: 30px;
     margin-left: 50px;
     padding-right: 45px;
-    background-image: linear-gradient();
     background-repeat: no-repeat;
     width: 60%;
 }
 
 section{
     margin-top: 15px;
-    background-color: rgba(255, 255, 255, 0.315);
+    background-color: rgb(255, 255, 255);
     width: 100%;
     padding: 20px;
     border-radius: 10px;
     transition: all .5s;
-    border-left: solid 1px white;
-    border-top: solid 1px white;
-    border-bottom: solid 1px rgba(121, 121, 121);
-    border-right: solid 1px rgba(121, 121, 121);
+    border: solid 1px rgb(151, 151, 151);
+    margin: 10px;
+    padding-right: 0px;
 
     backdrop-filter: blur(10px);
     z-index: 2000;
 }
 
-nav[id="follower"]::before{
-    content: '';
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    border-radius: 100%;
-
-    background-image: linear-gradient(45deg , rgb(0, 174, 255) , rgb(153, 0, 255));
-}
-
 section:hover{
-    transform: translateY(-5px);
+    transform: translateY(-2px);
 }
-
 section > h1{
     font-size: 30px;
+    margin-bottom: 5px;
+}
+
+section > h2{
+    margin-bottom: 15px;
+}
+
+section > b{
+    border-radius: 7px;
+    margin-top: 100px;
+    /* font-size: 17px; */
+    /* width: 40px; */
+    padding-left: 4px;
+    padding-right: 4px;
+    overflow-x: hidden;
+    color: white;
+
+    cursor: pointer;
+}
+section > b:hover{
+    border: solid 1px var(--blueAlpha);
+}
+
+section > b.reaction:hover{
+    border: solid 1px var(--blue);
+}
+
+section > b.reaction{
+    border: solid 1px var(--blue);
+    background-color: var(--blueAlpha);
 }
 
 ::-webkit-scrollbar{
     display: none;
 }
-
-    /* background-image: linear-gradient(45deg , rgba(0, 174, 255 , .5) , rgba(153, 0, 255 , .5)); */
