--- a/style/user.css
+++ b/style/user.css
@@ -1,76 +1,25 @@
-*{
-    margin: 0;
-    overflow-x: hidden;
-}
-:root{
-    --backgroundColor:rgb(231, 231, 231);
-    --perple: rgb(132, 0, 255);
-    --blue: rgb(0, 140, 255);
-    --blueAlpha: rgba(0, 140, 255, 0.473);
-    --nav: 300px;
-    --navmg: 350px;
-}
+@charset "UTF-8";
+* { margin: 0; overflow-x: hidden; }
 
-body{
-    background-color: var(--backgroundColor);
-}
+body { background-color: #e7e7e7; }
 
-section#info-1{
-    display: flex;
-    align-items: center;
-}
+section#info-1 { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+section#info-1 > img { margin: 50px; border-radius: 100%; /* border: solid 10px $perple; */ -webkit-box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.253); box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.253); }
+section#info-1 > article > h1 { font-size: 50px; }
 
-section#info-1 > article > h1{
-    font-size: 50px;
-}
+div#status { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-section#info-1 >  img{
-    margin: 50px;
-    border-radius: 100%;
-    /* border: solid 10px var(--perple); */
-    box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.253);
-}
+section#info-2 { margin-left: 100px; margin-right: 100px; padding: 10px; }
+section#info-2 > b { /* display: flex; */ justify-items: center; background-color: white; border-radius: 20px; font-size: 40px; padding: 10px; }
+section#info-2 > b::after { content: '명'; }
+section#info-2 > b > img { width: 50px; }
 
-div#status{
-    display: flex;
-    align-items: center;
-}
+div > img { width: 21px; }
 
-section#info-2{
-    margin-left: 100px;
-    margin-right: 100px;
-}
+h1 > img { width: 40px; }
 
-section#info-2 > article{
-    display: flex;
-    align-items: center;
+h2 > img { width: 25px; }
 
-    background-color: white;
-    width: 100%;
-    height: 70px;
-    border-radius: 20px;
-    /* font-size: 100px; */
-}
+::-webkit-scrollbar { display: none; }
 
-section#info-2 > article > img{
-    width: 50px;
-    margin-left: 20px;
-}
-
-
-div > img{
-    width: 21px;
-}
-
-h1 > img{
-    width: 40px;
-}
-
-h2 > img{
-    width: 25px;
-}
-
-
-::-webkit-scrollbar{
-    display: none;
-}
+/*# sourceMappingURL=user.css.map */
